2023-08-16  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c  Populate upper byte to lower byte even for lower
	bpp than 8. It overcomes quantum scalling error in gm. Code should
	be redesigned, but it is better than previous state.

	Enforce default color masks when bmp_info.compression==BI_RGB
	Existing masks will be ignored.

2023-08-17  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c  Enforce default matte for 40 byte header & 32bpp.

2023-08-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): For common formats with the
	required number of channels, but one is an 'unspecified' channel,
	promote unspecified alpha to unassociated alpha so that the alpha
	channel is not ignored. Addresses the remainder of SourceForge
	issue #718 "Set reasonable defaults when writing TIFF with
	transparency".

2023-08-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* Makefile.am (CHANGELOGS): Changelogs ChangeLog.2021 and
	ChangeLog.2022 where missing from the distribution.

2023-08-15  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/bmp.c  Fix reading corruption 16bpp.

2023-08-15  Fojtik Jaroslav  <JaFojtik@yandex.com>

	* coders/tiff.c  Fix compilation problem in MSVC.

2023-08-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (WriteTIFFImage): Default the alpha channel to
	type EXTRASAMPLE_UNASSALPHA(2).  The default was
	EXTRASAMPLE_UNSPECIFIED(0), which is particularly unfortunate
	given that GraphicsMagick 1.3.41 now silently ignores such
	channels. Patch by Markus Mützel.  Addresses SourceForge issue
	#718 "Set reasonable defaults when writing TIFF with
	transparency".

2023-08-12  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Updated for 1.3.41 release.

	* version.sh: Updated for 1.3.41 release.

2023-08-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/index.rst: Update Coverity metrics.

	* coders/tiff.c (ReadTIFFImage): Fix garbled logic pertaining to