@@ -1,3 +1,7 @@
+2023-08-17  Fojtik Jaroslav  <JaFojtik@yandex.com>
+
+	* coders/bmp.c Do not throttle on native low endian systems.
+
 2023-08-16  Fojtik Jaroslav  <JaFojtik@yandex.com>
 
 	* coders/bmp.c  Populate upper byte to lower byte even for lower
